added design ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     //CSV parser library
     implementation 'de.siegmar:fastcsv:1.0.3'
 
+    // Circular image library
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //Download manager dependency
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
