--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,9 @@ dependencies {
     // Circular image library
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Animation dependency
+    implementation 'com.airbnb.android:lottie:3.3.1'
+
     //Download manager dependency
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
