--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,41 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the app
         run: ./gradlew build
+
+
+
+
+
+  test_job:
+    name: Test
+    runs-on: ubuntu-18.04
+    continue-on-error: true
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Restore Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Run Debug Tests
+        run: ./gradlew testDebugUnitTest --continue
+
+      - name: Upload Test Reports
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-reports
+          path: '**/build/reports/tests/'
+
+
+
+
+
+
